# internal/application/user/routes.go
@@ -23,5 +23,7 @@ func (r *UserRoutes) Setup() {
 	group := r.handler.Gin.Group("/api/v1/user")
 
 	group.POST("/register", r.userController.Register)
+	group.POST("/activate/resend", r.userController.ResendActivation)
+
 	group.GET("/activate", r.userController.Activate)
 }
